<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#EF5959"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/nota3_fis"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toStartOf="@+id/nota4_fis"
        app:layout_constraintTop_toBottomOf="@+id/txt_fisica" />

    <EditText
        android:id="@+id/nota4_fis"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fisica"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/nota1_fis"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_limpar"
        app:layout_constraintEnd_toStartOf="@+id/nota2_fis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fisica"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/nota2_fis"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toStartOf="@+id/nota3_fis"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fisica"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/txt_fisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#BC8094"
        android:text="@string/txt_fisica"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_historia" />

    <EditText
        android:id="@+id/nota3_mat"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota3_mat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_portugues"
        app:layout_constraintStart_toEndOf="@+id/nota2_mat"
        app:layout_constraintTop_toBottomOf="@+id/txt_matematica"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/nota4_geo"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota4_geo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_historia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia" />

    <EditText
        android:id="@+id/nota1_mat"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/txt_nota1_mat"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_portugues"
        app:layout_constraintEnd_toStartOf="@+id/nota2_mat"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_matematica" />

    <TextView
        android:id="@+id/txt_historia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D59784"
        android:text="@string/txt_historia"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/txt_portugues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#BAABD5"
        android:text="@string/txt_portugues"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_matematica" />

    <EditText
        android:id="@+id/nota1_his"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota1_his"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_fisica"
        app:layout_constraintEnd_toStartOf="@+id/nota2_his"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_historia" />

    <EditText
        android:id="@+id/nota4_his"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota4_his"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_fisica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_historia"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/nota1_port"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota1_por"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toStartOf="@+id/nota2_port"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_portugues" />

    <TextView
        android:id="@+id/txt_matematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F3C7C4"
        android:text="@string/matematica"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nota3_geo"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota3_geo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_historia"
        app:layout_constraintEnd_toStartOf="@+id/nota4_geo"
        app:layout_constraintStart_toEndOf="@+id/nota2_geo"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia" />

    <EditText
        android:id="@+id/nota3_his"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota3_his"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_fisica"
        app:layout_constraintEnd_toStartOf="@+id/nota4_his"
        app:layout_constraintStart_toEndOf="@+id/nota2_his"
        app:layout_constraintTop_toBottomOf="@+id/txt_historia" />

    <EditText
        android:id="@+id/nota1_geo"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota1_geo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nota1_his"
        app:layout_constraintEnd_toStartOf="@+id/nota2_geo"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nota1_port"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/nota2_mat"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota2_mat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_portugues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_matematica" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E43636"
        android:text="@string/txt_calcular"
        app:layout_constraintBottom_toTopOf="@+id/txt_resultado"
        app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#009626"
        android:text="@string/txt_salvar"
        app:layout_constraintBottom_toTopOf="@+id/txt_resultado"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/txt_limpar"
        app:layout_constraintBottom_toTopOf="@+id/txt_resultado"
        app:layout_constraintEnd_toStartOf="@+id/btn_calcular"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nota1_his"
        app:layout_constraintVertical_bias="0.988" />

    <EditText
        android:id="@+id/nota2_geo"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota2_geo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_historia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia" />

    <EditText
        android:id="@+id/nota2_his"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota2_his"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_fisica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_historia" />

    <EditText
        android:id="@+id/nota4_port"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota4_port"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/nota3_port"
        app:layout_constraintTop_toBottomOf="@+id/txt_portugues" />

    <TextView
        android:id="@+id/txt_geografia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ECE398"
        android:text="@string/txt_geografia"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/nota3_port"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota3_port"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_portugues" />

    <EditText
        android:id="@+id/nota2_port"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota2_port"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_geografia"
        app:layout_constraintEnd_toStartOf="@+id/nota3_port"
        app:layout_constraintTop_toBottomOf="@+id/txt_portugues" />

    <EditText
        android:id="@+id/nota4_mat"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:hint="@string/txt_nota4_mat"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_portugues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nota3_mat"
        app:layout_constraintTop_toBottomOf="@+id/txt_matematica" />

    <TextView
        android:id="@+id/titulo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#DBF4F2"
        android:text="@string/media_notas"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/nome_aluno"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txt_nome_aluno"
        app:layout_constraintBottom_toTopOf="@+id/txt_matematica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_app" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="337dp"
        android:layout_height="105dp"
        android:layout_marginBottom="32dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_geografia"
        app:layout_constraintVertical_bias="0.945" />

</androidx.constraintlayout.widget.ConstraintLayout>